src/components/navigation/Navigation.scss
@use '../../sass/variables' as *;
@use '../../sass/mediaQueries' as *;
@use '../../sass/animations' as *;

.slider__nav {
    $thumbHeight: 6rem;
    $thumbWidth: 12rem;
    $height: calc($thumbHeight + 3rem);
    $animationTime: .4s;
    $bRradius: 5rem;
    position: absolute;
    width: 100%;
    max-width: 134rem;
    overflow: hidden;
    height: $height;
    bottom: - calc($height / 2);
    left: 50%;
    transform: translateX(-50%);
    z-index: 5;
    padding: 0;

    &-thumbs {
        position: absolute;
        list-style-type: none;
        height: 100%;
        left: 50%;
        transform: translateX(-50%);
        max-width: 100vw;
        margin: 0;
        display: flex;
        justify-content: center;
        gap: .5rem;
        padding: 1.5rem 1.5rem;
        overflow-x: scroll;
        scrollbar-width: none;
        -webkit-overflow-scrolling: touch;
        scroll-behavior: smooth;
        opacity: 0;
        animation: fade-in 1s ease-out 1s forwards;

        @include isTablet {
            width: 100%;
            max-width: 134rem;
        }

        &::-webkit-scrollbar {
            display: none;
        }

        &-item {
            position: relative;
            width:  $thumbWidth;
            height: $thumbHeight;
            flex: 0 0 $thumbWidth;
            z-index: 1;
            background-color: $black;
            box-shadow: 0 0 0.4rem -0.1rem rgb($black, 0.8), 0 1.3rem 1rem -1rem rgb($black, 0.5);
            cursor: pointer;
            transition: all $animationTime;
            border-radius: $bRradius;
            overflow: hidden;
            & svg {
                position: absolute;
                background: rgb($black, .8);
                transition: opacity .6s;
                border-radius: 5rem;
                padding: .6rem;
                width: 2.6rem;
                height: 2.6rem;
                top: .8rem;
                right: .8rem;
                color: rgb($slideActive, .8);
                opacity: 0;
                animation: fade-in .5s ease-out .5s forwards;
            }
            &-image {
                width: 120%;
                height: auto;
                position: absolute;
                top: 50%;
                left: 50%;
                filter: grayscale(100%);
                transform: translate(-50%, -50%);
                transition: width $animationTime, filter $animationTime;
            }

            @include isTablet {
                &:hover:not(.isProgress) {
                    z-index: 7;
                    scale: 1.1;
                    img {
                        width: 180%;
                        filter: grayscale(0);
                    }
                }
            }

            &.isActive {
                pointer-events: none;
                z-index: 5;
                img {
                    width: 180%;
                    filter: grayscale(0);
                }
            }
        }
    }
    
    &-image-count {
        font-size: 1.2rem;
        line-height: 1;
        color: $white;
        background: rgb($black, .6);
        opacity: 1;
        font-weight: 400;
        position: absolute;
        padding: .8rem 1.2rem;
        text-align: center;
        top: 1rem;
        right: 1rem;
        border-radius: 5rem;
        z-index: 6;

        @include isTablet {
            font-size: 1.2rem;
        }
    }

    &-title {
        font-size: 1.4rem;
        white-space: nowrap;
        position: relative;
        z-index: 7;
        color: $white;
        font-weight: 700;
        width: 0;
        overflow: hidden;
        text-align: right;
        text-overflow: ellipsis;
        text-shadow: 0 0 .5rem rgb($black, 1);
        text-transform: uppercase;
        font-family: "Quicksand", sans-serif;
        opacity: 0;
    }

    &-image {
        width: 100%;
        height: 100%;
        position: absolute;
        z-index: 1;
        object-fit: cover;
        object-position: center;
        pointer-events: none;
        transition: filter .3s, opacity .3s;
        filter: brightness(0);
        opacity: .5;
    }

    &-prev,
    &-next {
        position: absolute;
        top: 50%;
        left: .5rem;
        transform: translateY(-50%);
        transition: all $animationTime;
        z-index: 7;
        padding: 1rem;
        border-radius: 10rem;
        outline: none;
        border: none;
        width: 5rem;
        height: 5rem;
        font-size: 3rem;
        display: flex;
        justify-content: center;
        align-items: center;
        cursor: pointer;
        color: $white;
        overflow: hidden;
        background: none;
        text-overflow: ellipsis;
        &::after,
        &::before {
            content: '';
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
            z-index: 6;
            transition: all .5s;
            opacity: 0;
            background: linear-gradient(to right, rgb($black, .6) 0%, rgb($black, 0) 20%, rgb($black, 0) 80%, rgb($black, .6) 100%);
        }

        svg {
            z-index: 8;
            font-size: 3rem;
            position: relative;
            opacity: 1;
            transition: all $animationTime;
            filter: drop-shadow(0 0 .3rem rgb($black, .6));
        }

        &.isDisabled {
            opacity: .5;
            pointer-events: none;
        }

        @include isTablet {
            width: 8rem;
            height: 8rem;

            svg {
                font-size: 4rem;
            }

            &:hover {
                box-shadow: 0 0 .8rem rgb($black, .6);
                color: $slideActive;
                width: 26rem;
                background-size: cover;
                &::after,
                &::before {
                    opacity: 1;
                }
                .slider__nav-image {
                    opacity: 1;
                    filter: brightness(100%);
                }
                .slider__nav-title {
                    width: 18rem;
                    padding: 0 1rem;
                    opacity: 1;
                    transition: all .3s .3s;
                }
            }
        }
    }

    &-next {
        left: auto;
        right: .5rem;

        .slider__nav-title {
            text-align: left;
        }
    }
}

